--- a/lib/hierbautberlin_web/live/components/edit_subscription_modal.html.leex
+++ b/lib/hierbautberlin_web/live/components/edit_subscription_modal.html.leex
@@ -2,7 +2,7 @@
 
 <% {lat, lng} = @subscription.point.coordinates %>
 
-<div class="map-details"
+<div class="map-details details--subscription-map"
       data-controller="map-details"
       data-map-details-lat-value="<%= lat %>"
       data-map-details-lng-value="<%= lng %>"
