--- a/assets/css/components/footer.scss
+++ b/assets/css/components/footer.scss
@@ -7,6 +7,11 @@ footer {
   align-items: flex-end;
 }
 
+.footer--small {
+  font-size: 1.3rem;
+  justify-content: flex-end;
+}
+
 .footer--right {
   display: flex;
   p {
@@ -50,4 +55,10 @@ footer {
     margin-bottom: 2rem;
   }
 
+  .footer--small {
+    .footer--right {
+      margin-top: 0;
+      margin-bottom: 0;
+    }
+  }
 }
