--- a/lib/hierbautberlin_web/live/map_live.html.leex
+++ b/lib/hierbautberlin_web/live/map_live.html.leex
@@ -57,7 +57,7 @@
               <%= Timex.format!(item.item.published_at, "{0D}.{0M}.{YYYY}") %>
             </span>
           <% end %>
-          <span class="label--source" style="color:<%= item.source.color %>; border-color: <%= item.source.color %>"><%= item.source.name %></span>
+          <span class="label--source" style="color:<%= item.source.color %>; border-color: <%= item.source.color %>; background-color: <%= item.source.background_color %>"><%= item.source.name %></span>
         </div>
       </li>
     <% end %>
