[#281] Make colors look nice
closes #281

--- a/ansible/templates/traefik-dynamic-conf.yml.j2
+++ b/ansible/templates/traefik-dynamic-conf.yml.j2
@@ -1,7 +1,7 @@
 http:
   routers:
     to-my-application:
-      rule: "Host(`beta.hierbautberlin.de`)"
+      rule: "Host(`hierbautberlin.de`)"
       entryPoints:
         - "websecure"
       service: my-application
