--- a/assets/css/pages/map.scss
+++ b/assets/css/pages/map.scss
@@ -142,6 +142,7 @@
   -webkit-box-orient: vertical;
   -webkit-line-clamp: 2;
   overflow: hidden;
+  padding-left: 0.5rem;
   
   a {
     color: black;
