--- a/lib/hierbautberlin_web/live/components/geo_item_modal.html.leex
+++ b/lib/hierbautberlin_web/live/components/geo_item_modal.html.leex
@@ -1,4 +1,8 @@
-<h3 class="details--content--title"><%= @detail_item.title %></h3>
+<h3 class="details--content--title">
+  <div style="padding-left: 0.5rem; border-left: 5px solid <%= @detail_item.source.color %>">
+    <%= @detail_item.title %>
+  </div>
+</h3>
 
 <%= if !is_blank?(@detail_item.subtitle) do %>
   <h4><%= @detail_item.subtitle %></h4>
@@ -11,7 +15,7 @@
   <%= if @detail_item.state do %>
     <span class="label--state"><%= state_to_text(@detail_item) %></span>
   <% end %>
-  <span class="label--source" style="color:<%= @detail_item.source.color %>; border-color: <%= @detail_item.source.color %>; background-color: <%= @detail_item.source.background_color %>"><%= @detail_item.source.name %></span>
+  <span class="label--source"><%= @detail_item.source.name %></span>
 </div>
 
 <%= if !is_blank?(@detail_item.description) do %>
