--- a/lib/hierbautberlin_web/live/components/news_item_modal.html.leex
+++ b/lib/hierbautberlin_web/live/components/news_item_modal.html.leex
@@ -1,7 +1,11 @@
-<h3 class="details--content--title"><%= @detail_item.title %></h3>
+<h3 class="details--content--title">
+  <div style="padding-left: 0.5rem; border-left: 5px solid <%= @detail_item.source.color %>">
+    <%= @detail_item.title %>
+  </div>
+</h3>
 
 <div class="details--labels">
-  <span class="label--source" style="color:<%= @detail_item.source.color %>; border-color: <%= @detail_item.source.color %>; background-color: <%= @detail_item.source.background_color %>"><%= @detail_item.source.name %></span>
+  <span class="label--source"><%= @detail_item.source.name %></span>
 </div>
 
 <%= if !is_blank?(@detail_item.content) do %>
