--- a/lib/hierbautberlin_web/templates/email/new_items_found.html.eex
+++ b/lib/hierbautberlin_web/templates/email/new_items_found.html.eex
@@ -13,5 +13,5 @@
 </ul>
 
 <p>
-  Du kannst deine Benachrichtigungen jederzeit <a href="https://beta.hierbautberlin.de/users/subscriptions">hier</a> ändern.
+  Du kannst deine Benachrichtigungen jederzeit <a href="https://hierbautberlin.de/users/subscriptions">hier</a> ändern.
 </p>
