--- a/lib/hierbautberlin_web/templates/layout/email.html.eex
+++ b/lib/hierbautberlin_web/templates/layout/email.html.eex
@@ -70,7 +70,7 @@
 
     <div class="footer">
       <hr />
-      <a href="https://beta.hierbautberlin.de">HierBautBerlin.de</a> | <a href="mailto:mail@hierbautberlin.de">E-Mail</a> | <a href="https://beta.hierbautberlin.de/impressum">Impressum</a>
+      <a href="https://hierbautberlin.de">HierBautBerlin.de</a> | <a href="mailto:mail@hierbautberlin.de">E-Mail</a> | <a href="https://hierbautberlin.de/impressum">Impressum</a>
     </div>
   </body>
 </html>
